--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -4,7 +4,7 @@ html, body{
     width: 100%;
     height: 100%;
     font-family: 'Playfair Display', serif;
-    background-color: #FFFFF0;
+    background-color: white;
 }
 
 /* Chrome, Edge, Safari */
